# LightAgent

./: .gitignore  CLAUDE.md  README.md  README.zh-CN.md  cli.py  github_tools.py  nim_agent.py  pyproject.toml  server.py
LightAgent/: __init__.py  core.py  errors.py  flow.py  litellm_client.py  logger.py  mcp_client_manager.py  protocol.py  skill_tools.py  skills.py  tools.py  version.py
LightAgent/builtin_tools/: nos.py  python_executor.py
docker/: falkordb.yml
docs/: FAQ.md  browser_use.md  error_handling.md  lightflow.md  memory_security.md  model_providers.md  tools.md  vector_memory_adapter.md
example/: 08.browser_use.py  11.vector_memory_adapter.py
graphiti/: config-nim.yaml  config-ollama.yaml  setup.sh
mcp/: lightagent_mcp_settings.json  nim_mcp_settings.json
mcp/mcpServers/: mcpServer_weather_sse.py  weather.py
skills/creativity/: SKILL.md
skills/gupiaozhushou/: .clawignore  README.md  SKILL.md  examples\basic_usage.py  finance_toolkit.py  requirements.txt
tests/: lightflow_demo.py  test_lightflow.py  test_litellm_client.py  test_skill_manager_logging.py  test_vector_memory_adapter_example.py
tools/: analyze_data.py  browser_data_fetcher.py  calculate_margin_trading.py  get_stock_kline.py  get_stock_kline_data.py  get_stock_quote.py  get_stock_realtime_data.py  nl2sql_query.py
