[tool.poetry]
name = "LightAgent"
version = "0.7.5"
description = "LightAgent: Lightweight AI agent framework with memory, tools & tree-of-thought. Supports multi-agent collaboration, self-learning, and major LLMs (OpenAI/DeepSeek/Qwen). Open-source with MCP/SSE protocol integration."
authors = ["caiweige <caiweige@qq.com>"]
license = "Apache-2.0"
readme = [
    "README.md",        # English
    "README.zh-CN.md",  # 简体中文
    "README.es.md",     # Español
    "README.fr.md",     # Français
    "README.de.md",     # Deutsch
    "README.ja.md",     # 日本語
    "README.ko.md",     # 한국어
    "README.pt.md",     # Português
    "README.ru.md",     # Русский
]
repository = "https://github.com/wanxingai/LightAgent"
homepage = "https://github.com/wanxingai/LightAgent"
documentation = "https://sufe-aiflm-lab.github.io/LightAgent/"
keywords = ["ai-agent", "llm", "mcp", "multi-agent", "tool-calling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "LightAgent"},
]



[tool.poetry.dependencies]
python = ">=3.10,<4.0"
loguru = "0.7.3"
requests = "2.32.3"
openai = ">=1.60.0,<2.0.0"
colorama = "0.4.6"
httpx = "0.28.1"
httpx-sse = "0.4.0"
mcp = ">=1.9.0"
mem0ai = ">=0.1.70"
pydantic-settings = "2.8.1"
langfuse = ">=3.0.0"
PyYAML = ">=6.0.1"
boto3 = ">=1.34.0"
litellm = {version = ">=1.80.0,<1.87.0", optional = true}

[tool.poetry.extras]
litellm = ["litellm"]


[tool.ruff]
extend-include = ["*.ipynb"]
extend-exclude = [
    "docs/docs/expression_language/why.ipynb"  # TODO: look into why linter errors
]

[tool.ruff.lint.per-file-ignores]
"**/{cookbook,docs}/*" = [
    "E402",  # allow imports to appear anywhere in docs
    "F401",  # allow "imported but unused" example code
    "F811",  # allow re-importing the same module, so that cells can stay independent
    "F841",  # allow assignments to variables that are never read -- it's example code
]

# These files were failing the listed rules at the time ruff was adopted for notebooks.
# Don't require them to change at once, though we should look into them eventually.
"cookbook/gymnasium_agent_simulation.ipynb" = ["F821"]
"docs/docs/integrations/document_loaders/tensorflow_datasets.ipynb" = ["F821"]

[tool.poetry.plugins.dotenv]
ignore = "false"
dotenv = "dotenv:plugin"

[[tool.poetry.source]]
name = "PyPI"
priority="primary"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
